--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ghcr.io/lspmpkg/dpi:latest
+            ghcr.io/lspm-pkg/dpi:latest
